//
//  Accessibility.swift
//  Police Explorer
//
//  Created by Aaron McTavish on 04/04/2018.
//

import Foundation

struct Accessibility {

    // CrimeDetail
    static let CrimeDetailLabel = "CrimeDetailLabel"

    // CrimeTable
    static let CrimeTableCellPrefix = "CrimeTableCell - "

    // MapView
    static let MapViewContent = "MapViewContent"

    // UnitedKingdom
    static let UnitedKingdom = "United Kingdom"

}
