...
    override func viewDidLoad() {
        super.viewDidLoad()
        // Do any additional setup after loading the view, typically from a nib.

        view.backgroundColor = .white

        title = "Crimes"

        setUpMapController()
        setUpCrimeTableController()

        locationManager.delegate = self
    }
...
